--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,18 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# Dependencies
+# dependencies
 node_modules/
 .pnp
 .pnp.js
 
-# Environment files
+# Common
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# OS-specific files
 .DS_Store
 
 # Backend-specific
@@ -23,13 +15,18 @@ backend/.env
 frontend/node_modules/
 frontend/.env
 
-# Testing
+# testing
 coverage/
 
-# Production build
+# production
 build/
 
-# Logs
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
